src/objects/EnrollmentAnswers__c.object
<CustomObject>
    <description>answers that pertain to the inquiry and potentially the application form</description>
    <fields>
        <fullName>AnswerStatus__c</fullName>
        <description>to show weather the answer is active or inactive</description>
        <label>Answer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AnswerText__c</fullName>
        <label>Answer Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnrollmentQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Question</label>
        <referenceTo>EnrollmentQuestions__c</referenceTo>
        <relationshipLabel>Enrollment Answer</relationshipLabel>
        <relationshipName>EnrollmentAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MultiplierValue__c</fullName>
        <description>used for the grading algorithm</description>
        <label>Multiplier Value</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <description>Used in the grading algorithm</description>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>16</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PointValue__c</fullName>
        <description>Point Value for the grading algorithm</description>
        <label>Point Value</label>
        <precision>12</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionId__c</fullName>
        <formula>EnrollmentQuestion__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionKey__c</fullName>
        <label>Question Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <formula>EnrollmentQuestion__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>used on the grading algorithm</description>
        <label>Sort Order</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>used to place information on the inquiry form</description>
        <label>Value</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Enrollment Answers</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enrollment Answer Discription</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>